organized methods in Game. improved methods for end game bonuses